Formated code